<resources>
    <!--App Name-->
    <string name="app_name">Speak Nepali</string>

    <!--Main List-->
    <string name="category_phrases">Phrases</string>
    <string name="category_colors">Colors</string>
    <string name="category_numbers">Numbers</string>
    <string name="category_family">Family Members</string>
    <string name="category_time">Time</string>
    <string name="category_letters">Letters</string>

    <string name="color_red">red</string>
    <string name="color_blue">blue</string>
    <string name="color_green">green</string>
    <string name="color_black">black</string>
    <string name="color_gray">gray</string>
    <string name="color_white">white</string>
    <string name="color_yellow">yellow</string>
    <string name="color_orange">orange</string>
    <string name="color_brown">brown</string>
    <string name="color_purple">Purple</string>

    <string name="number_one">one</string>
    <string name="number_two">two</string>
    <string name="number_three">three</string>
    <string name="number_four">four</string>
    <string name="number_five">five</string>
    <string name="number_six">six</string>
    <string name="number_seven">seven</string>
    <string name="number_eight">eight</string>
    <string name="number_nine">nine</string>
    <string name="number_ten">ten</string>

    <string name="time_today">today</string>
    <string name="time_tomorrow">tomorrow</string>
    <string name="time_yesterday">yesterday</string>
    <string name="time_morning">morning</string>
    <string name="time_afternoon">afternoon</string>
    <string name="time_night">night</string>
    <string name="time_week">week</string>
    <string name="time_day">day</string>
    <string name="time_month">month</string>
    <string name="time_year">year</string>
    <string name="time_sunday">sunday</string>
    <string name="time_monday">monday</string>
    <string name="time_tuesday">tuesday</string>
    <string name="time_wednesday">wednesday</string>
    <string name="time_thursday">thursday</string>
    <string name="time_friday">friday</string>
    <string name="time_saturday">saturday</string>

    <string name="family_father">father</string>
    <string name="family_mother">mother</string>
    <string name="family_husband">husband</string>
    <string name="family_wife">wife</string>
    <string name="family_son">son</string>
    <string name="family_daughter">daughter</string>
    <string name="family_older_brother">older brother</string>
    <string name="family_younger_brother">younger brother</string>
    <string name="family_older_sister">older sister</string>
    <string name="family_younger_sister">younger sister</string>
    <string name="family_grandmother">grandmother</string>
    <string name="family_grandfather">grandfather</string>

    <string name="phrase_where_are_you_going">Where are you going?</string>
    <string name="phrase_what_is_your_name">What is your name?</string>
    <string name="phrase_my_name_is">My name is</string>
    <string name="phrase_how_are_you_feeling">How are you feeling?</string>
    <string name="phrase_im_feeling_good">I\'m feeling good.</string>
    <string name="phrase_are_you_coming">Are you coming?</string>
    <string name="phrase_yes_im_coming">"Yes, I\'m coming."</string>
    <string name="phrase_im_coming">I\'m coming.</string>
    <string name="phrase_lets_go">Let\'s go.</string>
    <string name="phrase_come_here">Come here.</string>

    <string name="food_breakfast">breakfast</string>
    <string name="food_lunch">lunch</string>
    <string name="food_dinner">dinner</string>
    <string name="food_water">water</string>
    <string name="food_tea">tea</string>
    <string name="food_coffee">coffee</string>
    <string name="food_lentils">lentils</string>
    <string name="food_rice">rice</string>
    <string name="food_vegetable">vegetable</string>
    <string name="button_example">Example</string>


</resources>
